@@ -1,3 +1,8 @@
+2014-06-12  Georg-Johann Lay  <avr@gjlay.de>
+
+	PR target/61443
+	* gcc.target/avr/torture/pr61443.c: New test.
+
 2014-06-11  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	PR c++/19200
