@@ -1,3 +1,9 @@
+2014-06-12  Georg-Johann Lay  <avr@gjlay.de>
+
+	PR target/61443
+	* config/avr/avr.md (push<mode>1): Avoid (subreg(mem)) when
+	loading from address spaces.
+
 2014-06-12  Martin Liska  <mliska@suse.cz>
 
 	PR ipa/61462
